--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="username">Username</string>
     <string name="confirm_password">Confirm_password</string>
     <string name="reviewsclients">Отзывы Клиентов</string>
+    <string name="refresh">Refresh</string>
 </resources>
